--- a/.env.example
+++ b/.env.example
@@ -20,9 +20,11 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=6valley
+DB_DATABASE=shutar_shawpno
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Tanvir@sush826842
+
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
